feat(automation): add job control
